# AFP

./: .gitignore  README.md  docker-compose.integration.yml  pyproject.toml
agents/configs/: code_analyzer.json  code_reviewer.json  file_manager.json  financial_analyst.json  planner.json  search_specialist.json  system_operator.json  terminal_specialist.json
db/migrations/: 0001_core_workflow.sql  001_core_schema.sql
docs/: business-partner-overview.md  long-term-gap-analysis.md  plan.md  technical-plan.md  ui-design-mockup.md  work-items.md
docs/adrs/: ADR-001-workflow-state-authority-and-event-model.md
skills/clarify-before-coding/: SKILL.md
skills/coding-conventions/: SKILL.md
skills/context-management/: SKILL.md
skills/convening-experts/: SKILL.md
skills/crafting-instructions/: SKILL.md
skills/executing-plans/: SKILL.md
skills/forecasting-reverso/: SKILL.md
skills/learning-opportunities/: SKILL.md
skills/recursive-context-processing/: SKILL.md
skills/refactoring-for-clarity/: SKILL.md
skills/reverse-socratic-examination/: SKILL.md
skills/reviewing-ai-papers/: SKILL.md
skills/skill-creator/: SKILL.md
skills/socratic/: SKILL.md
skills/specification/: SKILL.md
src/persistence/: reset.py  (+6 more)
tests/: test_agent_provider.py  test_api_and_worker.py  test_artefacts_and_approvals.py  test_ci_pr_ui.py  test_container_execution.py  test_execution_policy.py  test_hardening_features.py  test_milestone_a.py  test_persistence_schema.py  test_planning_pipeline.py  test_postgres_redis_integration.py  test_restart_recovery.py  test_workflow_engine.py
(+27 files in other folders)
