[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "afp-orchestrator"
version = "0.1.0"
description = "Agent factory platform bootstrap modules"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0,<4.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=6.0,<7.0",
    "sqlalchemy>=2.0,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
